--- a/reactiveui/on-dotnet/Bang.ServerSide/Bang/Pages/_Host.cshtml
+++ b/reactiveui/on-dotnet/Bang.ServerSide/Bang/Pages/_Host.cshtml
@@ -16,6 +16,8 @@
     <link href="css/site.css" rel="stylesheet"/>
     <script src="_content/MatBlazor/dist/matBlazor.js"></script>
     <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
+    <script src="_content/Blazorise/blazorise.js"></script>
+    <script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script>
 </head>
 <body>
 <app>
