working search example

--- a/reactiveui/on-dotnet/Bang.ServerSide/Bang/Pages/Search.razor
+++ b/reactiveui/on-dotnet/Bang.ServerSide/Bang/Pages/Search.razor
@@ -2,37 +2,44 @@
 @inject SearchViewModel _searchViewModel
 @page "/Search"
 <h3>Search</h3>
-<p>
-    <MatTextField @bind-Value="@ViewModel.SearchText" Dense="true" Label="Search the interweb" TextArea="true" FullWidth="true" Box="true" OnInput="" /> <MatButton @on-click= ></MatButton>
-</p>
-<p>
-    <div>
-        @if (@ViewModel.SearchResults.Any())
+<input id="name"
+       type="text"
+       class="form-control"
+       placeholder="Search the interweb"
+       @bind-value="ViewModel.SearchText"
+       @bind-value:event="oninput" />
+<div>
+    @if (ViewModel.SearchResults.Any())
+    {
+        @foreach (var relatedTopic in ViewModel.SearchResults)
         {
-            @foreach (var relatedTopic in ViewModel.SearchResults)
-            {
-                <div>
-                    <p>@relatedTopic.Icon.URL</p>
-                    <p>@relatedTopic.Text</p>
-                    <a href="@relatedTopic.FirstUrl">@relatedTopic.Text</a>
-                    @relatedTopic.
-
-                </div>
-            }
+            <div>
+                <p>@relatedTopic.Icon.URL</p>
+                <p>@relatedTopic.Name</p>
+                <a href="@relatedTopic.FirstUrl">@relatedTopic.Text</a>
+                @if (@relatedTopic.Topics != null && @relatedTopic.Topics.Any())
+                {
+                    <ul>
+                        @foreach (var topic in relatedTopic.Topics)
+                        {
+                            <li><a href="@topic.FirstUrl">@topic.Text</a></li>
+                        }
+                    </ul>
+                }
+            </div>
         }
-    </div>
-</p>
+    }
+</div>
+<div class="mat-layout-grid">
+    <div class="mat-layout-grid-inner">
 
-@* <div class="mat-layout-grid"> *@
-@*     <div class="mat-layout-grid-inner"> *@
-@* *@
-@*         <CardView/> *@
-@* *@
-@*         <CardView/> *@
-@* *@
-@*         <CardView/> *@
-@*     </div> *@
-@* </div> *@
+        <CardView/>
+
+        <CardView/>
+
+        <CardView/>
+    </div>
+</div>
 
 <style>
     .demo-mat-card {
